# sqlx_migrator

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile.toml  README.MD  bors.toml  cliff.toml  crates.js  help.html  index.html  justfile  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: build.yml  deploy_page.yml  publish.yml  release_note.yml
examples/mysql/: main.rs
examples/mysql/migrations/: m0001_simple.rs  m0002_with_parents.rs  m0003_use_macros.rs  m0004_complex_operation.rs  m0005_reference_complex.rs  mod.rs
examples/postgres/: main.rs
examples/postgres/migrations/: m0001.rs  m0001_simple.rs  m0002.rs  m0002_with_parents.rs  m0003_use_macros.rs  m0004_complex_operation.rs  m0005_reference_complex.rs  mod.rs
examples/sqlite/: main.rs
examples/sqlite/migrations/: m0001.rs  m0001_simple.rs  m0002.rs  m0002_with_parents.rs  m0003_use_macros.rs  m0004_complex_operation.rs  m0005_reference_complex.rs  mod.rs
implementors/clap/derive/: trait.Args.js  trait.FromArgMatches.js
implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/sqlx_core/from_row/: trait.FromRow.js
implementors/sqlx_migrator/migrator/: trait.DatabaseOperation.js  trait.Migrator.js
implementors/std/error/: trait.Error.js
search.desc/sqlx_migrator/: sqlx_migrator-desc-0-.js
search.index/: 014a8af79d95.js  016852db9cab.js  019fca3f5ebe.js  020f26de064e.js  02867c2a91b5.js  08691ff4fa5a.js  08c56ad55cac.js  0b883bb55deb.js  10365240d31a.js  10c7da216468.js  11856156fa9e.js  18f207171e7b.js  1be1975752de.js  1c1af2aa76fa.js  201a90c52b58.js  20b5d085f817.js  25ac5cbb1f6c.js  26ab9c1f54a0.js  292625290ba6.js  29c67a241274.js  2b147dc256c7.js  2b3fd4993ebd.js  2bb7fad8b405.js  2dbac2880d99.js  2dfff33ea76b.js  3093e665425e.js  30cd13db0b88.js  31f56a343497.js  32ae493813ef.js  34a94471e945.js  357b87843c46.js  35b6b71227b6.js  384aa7023434.js  3a17b56b9274.js  3b7f842da171.js  3c0df98cb6e3.js  3c7e4f90f2ad.js  4496066d76b6.js  4497b70e911b.js  44c4e46ced9c.js  (+33 more)
search.index/crateNames/: 26f8673d09c4.js
search.index/desc/: 20fc5a5c9159.js  49a5f2987635.js
search.index/entry/: 25d188f15f8e.js  eba23a815ba6.js
search.index/function/: 308351b2d739.js  b9660c47d999.js
search.index/generic_inverted_index/: 8fb77ad04226.js  d8c9fa3f1402.js
search.index/name/: dc84b301ad1b.js  e02901cf8b15.js
search.index/normalizedName/: 2d64b4367a46.js  60d88dc1e21e.js
search.index/path/: ddf79d58efe7.js  eb2445d003bc.js
search.index/type/: 74b8b3a6f242.js  876828cf6e2d.js
sqlx_migrator/: all.html  enum.Error.html  index.html  macro.any_migration!.html  macro.any_migration.html  macro.any_operation!.html  macro.any_operation.html  macro.migration!.html  macro.migration.html  macro.mysql_migration!.html  macro.mysql_migration.html  macro.mysql_operation!.html  macro.mysql_operation.html  macro.operation.html  macro.postgres_migration!.html  macro.postgres_migration.html  macro.postgres_operation!.html  macro.postgres_operation.html  macro.sqlite_migration!.html  macro.sqlite_migration.html  macro.sqlite_operation!.html  macro.sqlite_operation.html  macro.vec_box!.html  macro.vec_box.html  sidebar-items.js  struct.MigrationCommand.html  struct.Migrator.html  struct.Plan.html  trait.Info.html  trait.Migrate.html  trait.Migration.html  trait.OldMigrator.html  trait.Operation.html  trait.Synchronize.html
sqlx_migrator/cli/: enum.SubCommand.html  fn.run.html  index.html  sidebar-items.js  struct.Apply.html  struct.MigrationCommand.html  struct.Revert.html
sqlx_migrator/error/: enum.Error.html  index.html  sidebar-items.js
sqlx_migrator/migration/: index.html  sidebar-items.js  struct.AppliedMigrationSqlRow.html  trait.Migration.html  trait.MigrationTrait.html
sqlx_migrator/migrator/: enum.Plan.html  enum.PlanType.html  index.html  sidebar-items.js  struct.Migrator.html  struct.Plan.html  struct.SqlMigratorMigration.html  trait.DatabaseOperation.html  trait.Info.html  trait.Migrate.html  trait.Migrator.html  trait.MigratorTrait.html
sqlx_migrator/operation/: index.html  sidebar-items.js  trait.Operation.html  trait.OperationTrait.html
sqlx_migrator/postgres/: index.html  sidebar-items.js
sqlx_migrator/postgres/migrator/: index.html  sidebar-items.js  struct.Migrator.html
sqlx_migrator/sqlite/: index.html  sidebar-items.js
sqlx_migrator/sqlite/migrator/: index.html  sidebar-items.js  struct.Migrator.html
sqlx_migrator/sync/: index.html  sidebar-items.js  trait.OldMigrator.html  trait.Synchronize.html
src/: clap.rs  cli.rs  error.rs  lib.rs  macros.rs  migration.rs  migrator.rs  operation.rs  sync.rs
src/migrator/: any.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  tests.rs
src/postgres/: migrator.rs  mod.rs
src/sqliite/: migrator.rs
src/sqlite/: migrator.rs  mod.rs
src/sqlx_migrator/: cli.rs.html  error.rs.html  lib.rs.html  macros.rs.html  migration.rs.html  migrator.rs.html  operation.rs.html  sync.rs.html
src/sqlx_migrator/migrator/: any.rs.html  mod.rs.html  mysql.rs.html  postgres.rs.html  sqlite.rs.html
src/sqlx_migrator/postgres/: migrator.rs.html  mod.rs.html
src/sqlx_migrator/sqlite/: migrator.rs.html  mod.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  (+3 more)
(+20 files in other folders)
