[package]
name = "sqlx_migrator"
version = "0.16.1"
edition = "2021"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/sqlx_migrator"
repository = "https://github.com/iamsauravsharma/sqlx_migrator"
description = "Migrator for writing sqlx migration using Rust instead of SQL"
license = "MIT"
readme = "README.MD"
keywords = ["sqlx", "sqlx_migrations", "rust_migrations"]
categories = ["database"]

[dependencies]
sqlx = { version = "0.8.0", default-features = false, features = ["macros"] }
async-trait = "0.1.70"
tracing = { version = "0.1.37" }
thiserror = "2.0.0"
clap = { version = "4.3.10", features = ["derive"], optional = true }
crc32fast = { version = "1.3.2", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls"] }

[features]
default = ["cli"]
cli = ["dep:clap"]
postgres = ["sqlx/postgres", "dep:crc32fast"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql", "dep:crc32fast"]
any = ["sqlx/any"]

[[example]]
name = "postgres"
path = "examples/postgres/main.rs"
required-features = ["postgres", "cli"]

[[example]]
name = "sqlite"
path = "examples/sqlite/main.rs"
required-features = ["sqlite", "cli"]

[[example]]
name = "mysql"
path = "examples/mysql/main.rs"
required-features = ["mysql", "cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
