[package]
name = "sqlx_migrator"
version = "0.18.0"
edition = "2024"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/sqlx_migrator"
repository = "https://github.com/iamsauravsharma/sqlx_migrator"
description = "Migrator for writing sqlx migration using Rust instead of SQL"
license = "MIT"
readme = "README.MD"
keywords = ["sqlx", "sqlx_migrations", "rust_migrations"]
categories = ["database"]

[dependencies]
sqlx = { version = "0.8.0", default-features = false, features = ["macros"] }
async-trait = "0.1.70"
tracing = { version = "0.1.37" }
thiserror = "2.0.0"
clap = { version = "4.3.10", features = ["derive"], optional = true }
crc32fast = { version = "1.3.2", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls"] }

[features]
default = ["cli"]
cli = ["dep:clap"]
postgres = ["sqlx/postgres", "dep:crc32fast"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql", "dep:crc32fast"]
any = ["sqlx/any"]

[[example]]
name = "postgres"
path = "examples/postgres/main.rs"
required-features = ["postgres", "cli"]

[[example]]
name = "sqlite"
path = "examples/sqlite/main.rs"
required-features = ["sqlite", "cli"]

[[example]]
name = "mysql"
path = "examples/mysql/main.rs"
required-features = ["mysql", "cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
redundant_imports = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unstable_features = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
allow_attributes = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
infinite_loop = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
redundant_test_prefix = "warn"
tests_outside_test_module = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unused_trait_names = "warn"
use_debug = "warn"
all = { level = "deny", priority = -1 }
pedantic = "warn"
